--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,8 @@ trades/
 # === Miljøfiler og credentials ===
 .env
 .env.*
+.envrc
+.secrets
 secrets/
 config/*.json
 config/client_secret_*.json
@@ -100,6 +102,7 @@ tensorboard/
 # === VS Code, PyCharm, OS-filer ===
 .vscode/
 .idea/
+*.code-workspace
 __pycache__/
 .DS_Store
 Thumbs.db
@@ -114,9 +117,9 @@ build/
 eggs/
 
 # === Test/Eksperiment-filer og noter ===
-# (Ignorér evt. testfiler i roden; tillad tests/ altid)
+# Ignorér evt. testfiler i roden; tillad alt i tests/ (rekursivt)
 test_*.py
-!tests/*.py
+!tests/**
 tests/output/
 notes/
 notebooks/
@@ -131,6 +134,8 @@ reports/
 checkpoints/
 .cache/
 *.bak
+.mypy_cache/
+.tox/
 
 # === CSV og output (kun evals og eksempler må med) ===
 *.csv
@@ -163,11 +168,35 @@ desktop.ini
 
 # === Misc. IDE/pyinstaller artefakter ===
 *.spec
+.typings/
+.python-version
 
-# === Pyright type-checking artefakter ===
-typings/
+# === Jupyter checkpoints ===
+.ipynb_checkpoints/
 
 # === Diverse midlertidige og eksperiment-artefakter ===
 *.tmp
 *.temp
 .experiment/
+
+# === Observability / Docker (ALDRIG secrets i git) ===
+# Docker secrets (KUN lokale filer – templates må gerne trackes)
+ops/alertmanager/secrets/*
+# Tillad templates og runtime-skabelon
+!ops/alertmanager/templates/**
+!ops/alertmanager/alertmanager.runtime.yml
+# Hvis nogen skulle komme til at rendre direkte til repoet
+ops/alertmanager/alertmanager.yml
+
+# Lokale compose-artefakter og data
+ops/compose/data/grafana/
+ops/compose/data/prometheus/
+ops/compose/data/alertmanager/
+ops/compose/resolved.yml
+ops/compose/.env
+
+# === Lokale test/scratch-filer i roden (hold dem ude af git) ===
+/resolved.yml
+/DIT_TELEGRAM_BOT_TOKEN
+/7919277721
+DIT_*
