--- a/pytest.ini
+++ b/pytest.ini
@@ -12,11 +12,11 @@ python_functions = test_*
 # Sørg for at projektroden er på import-stien
 pythonpath = .
 
-# Ignorer støjende mapper (venv, git, cache, artefakter)
+# Ignorer støjende mapper (venv, git, cache, artefakter, observability)
 norecursedirs =
     .git
     .venv
-    .venv_tf_gpu
+    .venv_*
     .pytest_cache
     htmlcov
     notebooks
@@ -24,6 +24,8 @@ norecursedirs =
     logs
     backups
     mlruns
+    ops
+    docs
 
 # Asyncio-integration (kræver pytest-asyncio >= 0.20)
 asyncio_mode = auto
@@ -36,6 +38,9 @@ markers =
     gui: GUI-relaterede tests
     e2e: Fuld end-to-end pipeline-smoke (producerer artefakter)
     contract: Kontrakt-tests der kan kalde eksterne API'er (fx PnL/Telegram)
+    heavy: Tunge tests der kræver native deps/store datasæt
+    talib: Tests der kræver TA-Lib
+    pandas_ta: Tests der kræver pandas_ta
 
 # Standard-flags
 addopts =
@@ -44,7 +49,7 @@ addopts =
     --maxfail=1
     --disable-warnings
     --strict-markers
-    --timeout=20
+    --timeout=30
     --durations=10
     --color=yes
     # coverage – brug .coveragerc til kilder/omit
@@ -63,10 +68,15 @@ addopts =
     --ignore=outputs
     --ignore=data
     --ignore=notebooks
+    --ignore=ops
+    --ignore=docs
+    # 🔧 Midlertidigt: udeluk tunge/native tests globalt (matcher CI)
+    -k "not heavy and not talib and not pandas_ta"
 
 # Undertryk specifikke, kendte advarsler
 filterwarnings =
     ignore:.*'H' is deprecated and will be removed in a future version.*:FutureWarning
+    ignore:Failed to extract font properties.*:UserWarning
 
 # CLI logging (nyttigt når tests fejler på CI)
 log_cli = true
