--- a/.github/workflows/alerting-ci.yml
+++ b/.github/workflows/alerting-ci.yml
@@ -18,19 +18,32 @@ on:
       - "requirements.txt"
       - ".github/workflows/alerting-ci.yml"
 
+concurrency:
+  group: alerting-${{ github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+
 jobs:
   check-alerting:
     name: Prometheus, Alertmanager & Tests
     runs-on: ubuntu-latest
+    timeout-minutes: 20
 
     env:
+      # Prometheus / promtool version (pin – undgå :latest)
+      PROM_VERSION: "v3.6.0"
+
       # Dummy-secrets til Alertmanager-render i CI
       TELEGRAM_BOT_TOKEN: "ci_dummy_token_1234567890"
       TELEGRAM_CHAT_ID: "123456789"
       AM_RENDER_DIR: /tmp/amcfg
+
       # Headless matplotlib + isolér fra usersite
       MPLBACKEND: Agg
       PYTHONNOUSERSITE: "1"
+      PYTHONUNBUFFERED: "1"
 
     steps:
       - name: Checkout
@@ -46,7 +59,12 @@ jobs:
         run: python -m pip install --upgrade pip
 
       - name: Install deps
-        run: pip install -r requirements.txt
+        run: |
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            pip install fastapi uvicorn prometheus-client httpx pytest
+          fi
 
       - name: Expose repo on PYTHONPATH
         run: echo "PYTHONPATH=$PWD" >> $GITHUB_ENV
@@ -109,19 +127,57 @@ jobs:
           fi
 
       # ---------- Prometheus valideringer ----------
+      - name: Ensure Prometheus rule files exist
+        shell: bash
+        run: |
+          set -euxo pipefail
+          mkdir -p ops/prometheus
+          # Minimale placeholders hvis filer mangler
+          if [ ! -f ops/prometheus/alerts.yml ]; then
+            printf '%s\n' \
+              'groups:' \
+              '  - name: alerts.empty' \
+              '    rules: []' \
+              > ops/prometheus/alerts.yml
+          fi
+          if [ ! -f ops/prometheus/recording_rules.yml ]; then
+            printf '%s\n' \
+              'groups:' \
+              '  - name: recordings.empty' \
+              '    rules: []' \
+              > ops/prometheus/recording_rules.yml
+          fi
+          # prometheus.yml skal eksistere – fail hvis den mangler
+          test -f ops/prometheus/prometheus.yml
+
       - name: promtool check config (prometheus.yml)
         run: |
+          set -euxo pipefail
           docker run --rm \
-            -v "$PWD/ops/prometheus:/etc/prometheus:ro" \
-            prom/prometheus:latest \
-            promtool check config /etc/prometheus/prometheus.yml
+            -v "$PWD/ops/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro" \
+            -v "$PWD/ops/prometheus/alerts.yml:/etc/prometheus/alerts.yml:ro" \
+            -v "$PWD/ops/prometheus/recording_rules.yml:/etc/prometheus/recording_rules.yml:ro" \
+            --entrypoint=promtool \
+            "prom/prometheus:${PROM_VERSION}" \
+            check config /etc/prometheus/prometheus.yml
 
       - name: promtool check rules (alerts.yml)
         run: |
+          set -euxo pipefail
           docker run --rm \
-            -v "$PWD/ops/prometheus:/etc/prometheus:ro" \
-            prom/prometheus:latest \
-            promtool check rules /etc/prometheus/alerts.yml
+            -v "$PWD/ops/prometheus/alerts.yml:/etc/prom/alerts.yml:ro" \
+            --entrypoint=promtool \
+            "prom/prometheus:${PROM_VERSION}" \
+            check rules /etc/prom/alerts.yml
+
+      - name: promtool check rules (recording_rules.yml)
+        run: |
+          set -euxo pipefail
+          docker run --rm \
+            -v "$PWD/ops/prometheus/recording_rules.yml:/etc/prom/recording_rules.yml:ro" \
+            --entrypoint=promtool \
+            "prom/prometheus:${PROM_VERSION}" \
+            check rules /etc/prom/recording_rules.yml
 
       # ---------- Alertmanager render + check ----------
       - name: Render Alertmanager config (envsubst med dummy-secrets)
@@ -146,6 +202,7 @@ jobs:
 
       - name: amtool check-config (rendered alertmanager.yml + templates)
         run: |
+          set -euxo pipefail
           docker run --rm \
             -v "$AM_RENDER_DIR:/amcfg:ro" \
             -v "$PWD/ops/alertmanager/templates:/etc/alertmanager/templates:ro" \
